--- a/AngularApp/src/app/components/filter/filter.component.html
+++ b/AngularApp/src/app/components/filter/filter.component.html
@@ -11,6 +11,6 @@
             <li *ngFor="let item of filteredList2" class="filter-item p-1" (click)="setValue2(item)">{{item}}</li>
         </ul>
     </div>
-    <button class="btn btn-primary btn-filter mt-2" (click)="searchSubmit()">Nastavi</button>
+    <button class="btn btn-primary btn-filter mt-2" (click)="searchSubmit()">{{ "continue" | translate }}</button>
     <hr>
 </div>
