--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,24 @@
 <nav class="navbar navbar-expand-xl bg-body-tertiary shadow-sm">
   <a class="navbar-brand px-5" routerLink="/">BaseCure</a>
-  <button *ngIf="isLoggedIn()" class="navbar-toggler btn btn-secondary me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button *ngIf="isLoggedIn()" class="navbar-toggler btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ms-auto">
-      <li *ngIf="showLink(['korisnik', 'ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/pretrazi" routerLinkActive="active-link">Pretraži</a></li>
-      <li *ngIf="showLink(['korisnik', 'ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/korpa" routerLinkActive="active-link">Korpa</a></li>
-      <li *ngIf="showLink(['korisnik', 'ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/podaci" routerLinkActive="active-link">Moji podaci</a></li>
-      <li *ngIf="showLink(['apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/narudzbe" routerLinkActive="active-link">Narudžbe</a></li>
-      <li *ngIf="showLink(['apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/lijekovi" routerLinkActive="active-link">Lijekovi</a></li>
-      <li *ngIf="showLink(['apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/dodaj" routerLinkActive="active-link">Dodaj lijek</a></li>
-      <li *ngIf="showLink(['bolnica', 'apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/podaci" routerLinkActive="active-link">Podaci</a></li>
-      <li *ngIf="showLink(['bolnica', 'apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/lokacija" routerLinkActive="active-link">Lokacija</a></li>
-      <li *ngIf="showLink(['ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/ljekar/uputnice" routerLinkActive="active-link">Pregledaj uputnice</a></li>
-      <li *ngIf="isLoggedIn()" class="nav-item"><button class="btn btn-primary navbar-link" (click)="logoutUser()">Odjavi se</button></li>
+      <li *ngIf="showLink(['korisnik', 'ljekar'])"><a class="btn navbar-link" routerLink="/pretrazi" routerLinkActive="active-link">{{ 'search' | translate }}</a></li>
+      <li *ngIf="showLink(['korisnik', 'ljekar'])"><a class="btn navbar-link" routerLink="/korpa" routerLinkActive="active-link">{{ 'cart' | translate }}</a></li>
+      <li *ngIf="showLink(['korisnik', 'ljekar'])"><a class="btn navbar-link" routerLink="/podaci" routerLinkActive="active-link">{{ 'data' | translate }}</a></li>
+      <li *ngIf="showLink(['apoteka'])"><a class="btn navbar-link" routerLink="/apoteka/narudzbe" routerLinkActive="active-link">{{ 'orders' | translate }}</a></li>
+      <li *ngIf="showLink(['apoteka'])"><a class="btn navbar-link" routerLink="/apoteka/lijekovi" routerLinkActive="active-link">{{ 'medications' | translate }}</a></li>
+      <li *ngIf="showLink(['apoteka'])"><a class="btn navbar-link" routerLink="/apoteka/dodaj" routerLinkActive="active-link">{{ 'add_medication' | translate }}</a></li>
+      <li *ngIf="showLink(['bolnica', 'apoteka'])"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/podaci" routerLinkActive="active-link">{{ 'data' | translate }}</a></li>
+      <li *ngIf="showLink(['bolnica', 'apoteka'])"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/lokacija" routerLinkActive="active-link">{{ 'location' | translate }}</a></li>
+      <li *ngIf="showLink(['ljekar'])"><a class="btn navbar-link" routerLink="/ljekar/uputnice" routerLinkActive="active-link">{{ 'view_prescriptions' | translate }}</a></li>
+      <li *ngIf="isLoggedIn()"><button class="btn btn-primary navbar-link" (click)="logoutUser()">{{ 'logout' | translate }}</button></li>
     </ul>
   </div>
+  <select class="language-select" (change)="changeLanguage($event)">
+    <option value="ba" [selected]="language == 'ba'">🇧🇦</option>
+    <option value="us" [selected]="language == 'us'">🇺🇸</option>
+  </select>
 </nav>
