--- a/AngularApp/src/app/components/modal/modal.component.html
+++ b/AngularApp/src/app/components/modal/modal.component.html
@@ -2,12 +2,12 @@
     <div class="modal-dialog">
         <div class="modal-content shadow-lg">
             <div class="modal-header">
-                <h5 class="modal-title">Da li ste sigurni da želite nastaviti</h5>
+                <h5 class="modal-title">{{ 'confirmMessage' | translate }}</h5>
                 <button type="button" class="btn-close" (click)="closeModalHandler()"></button>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" (click)="onSubmitHandler()">Da</button>
-                <button type="button" class="btn btn-secondary" (click)="closeModalHandler()">Ne</button>
+                <button type="button" class="btn btn-primary" (click)="onSubmitHandler()">{{ 'yes' | translate }}</button>
+                <button type="button" class="btn btn-secondary" (click)="closeModalHandler()">{{ 'no' | translate }}</button>
             </div>
         </div>
     </div>
