--- a/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
+++ b/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="my-4 row d-flex flex-row justify-content-around">
-        <img class="thumbnail rounded shadow mx-4 col-8" [src]="res.slika || './../../../assets/img/no-image-avabliable.jpg'" alt="Slika">
+        <img class="thumbnail rounded shadow mx-4 col-8" [src]="res.slika || './../../../assets/img/no-image-avabliable.jpg'" alt="{{ 'image' | translate }}">
         <div class="mx-4 col">
             <div class="name d-flex align-items-center">
                 <h2>{{res.ime}} {{res.prezime}}</h2>
@@ -11,7 +11,7 @@
             <div class="data">{{res.adresa}}</div>
             <a href="mailto:{{res.mailAdresa}}" class="data text-decoration-none mt-2">{{res.mailAdresa}}</a>
             <a href="tel:{{res.kontaktBroj}}" class="data text-decoration-none">{{res.kontaktBroj}}</a>
-            <a class="btn btn-primary mt-3" [routerLink]="'/kontakt/' + res.ljekarId">Zakaži termin</a>
+            <a class="btn btn-primary mt-3" [routerLink]="'/kontakt/' + res.ljekarId">{{ 'schedule_appointment' | translate }}</a>
         </div>
         <app-view-map [medicalInstitutionId]="res.ustanovaId"></app-view-map>
     </div>
