--- a/AngularApp/src/app/pages/user/user-search-doctors/user-search-doctors.component.html
+++ b/AngularApp/src/app/pages/user/user-search-doctors/user-search-doctors.component.html
@@ -1,6 +1,6 @@
 <app-filter
-    placeholder1="Naziv ljekara"
-    placeholder2="Naziv specijalizacije"
+    placeholder1="{{ 'doctor_name' | translate }}"
+    placeholder2="{{ 'specialization_name' | translate }}"
     (searchOptions)="getSearchResults($any($event))"
 ></app-filter>
 <div class="container cards">
@@ -8,9 +8,9 @@
         [img]="i.slika || './../../../assets/img/no-image-avabliable.jpg'"
         [title]="i.imePrezime"
         [description]="i.specijalizacija"
-        btn_text1="Termini"
+        btn_text1="{{ 'appointments' | translate }}"
         [btn_link1]="'/kontakt/' + i.ljekarId"
-        btn_text2="Detalji"
+        btn_text2="{{ 'details' | translate }}"
         [btn_link2]="'/ljekar/' + i.ljekarId"
     ></app-card>
 </div>
