--- a/AngularApp/src/app/pages/user/user-search-medications/user-search-medications.component.html
+++ b/AngularApp/src/app/pages/user/user-search-medications/user-search-medications.component.html
@@ -1,6 +1,6 @@
 <app-filter
-  placeholder1="Naziv lijeka"
-  placeholder2="Opis lijeka"
+  placeholder1="{{ 'medication_name' | translate }}"
+  placeholder2="{{ 'medication_description' | translate }}"
   (searchOptions)="getSearchResults($any($event))"
 ></app-filter>
 <div class="container main">
@@ -9,7 +9,7 @@
     [name]="i.naziv"
     [description]="i.opis"
     [price]="i.cijena + 'KM'"
-    btnText="Dodaj u korpu"
+    btnText="{{ 'add_to_cart' | translate }}"
     (btnClick)="addOrder(i.lijekId)"
   ></app-item-list>
 </div>
