--- a/AngularApp/src/app/pages/user/user-search-doctors/user-search-doctors.component.html
+++ b/AngularApp/src/app/pages/user/user-search-doctors/user-search-doctors.component.html
@@ -9,7 +9,7 @@
         [title]="i.imePrezime"
         [description]="i.specijalizacija"
         btn_text1="{{ 'contact' | translate }}"
-        [btn_link1]="'/kontakt/' + i.ljekarId"
+        [btn_link1]="'/poruke/' + i.korisnikId"
         btn_text2="{{ 'details' | translate }}"
         [btn_link2]="'/pretrazi/ljekar/' + i.ljekarId"
     ></app-card>
