--- a/AngularApp/src/app/pages/index-page/index-page.component.html
+++ b/AngularApp/src/app/pages/index-page/index-page.component.html
@@ -1,5 +1,5 @@
 <div class="login shadow">
-    <form #loginForm="ngForm" (submit)="loginUser(loginForm.value)">
+    <form #form="ngForm" (submit)="loginUser(form.value)">
         <h3 class="text-center mt-2">{{ 'login' | translate }}</h3>
         <div class="form-group first-input">
             <label>{{ 'email_address' | translate }}:</label>
