--- a/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
+++ b/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
@@ -11,7 +11,7 @@
             <div class="data">{{res.adresa}}</div>
             <a href="mailto:{{res.mailAdresa}}" class="data text-decoration-none mt-2">{{res.mailAdresa}}</a>
             <a href="tel:{{res.kontaktBroj}}" class="data text-decoration-none">{{res.kontaktBroj}}</a>
-            <a class="btn btn-primary mt-3" [routerLink]="'/kontakt/' + res.ljekarId">{{ 'schedule_appointment' | translate }}</a>
+            <a class="btn btn-primary mt-3" [routerLink]="'/poruke/' + res.korisnikId">{{ 'contact_doctor' | translate }}</a>
         </div>
         <app-view-map [medicalInstitutionId]="res.ustanovaId"></app-view-map>
     </div>
