--- a/AngularApp/src/app/pages/user/user-data/user-data.component.html
+++ b/AngularApp/src/app/pages/user/user-data/user-data.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="content my-5">
-        <form #loginForm="ngForm">
+        <form #form="ngForm">
             <div class="mx-1">
                 <div class="form-group">
                     <span>{{ 'first_name' | translate }}:</span>
@@ -36,5 +36,5 @@
 <app-modal
     *ngIf="showModal"
     (closeModal)="showModal = false"
-    (onSubmit)="EditUser(loginForm.value)"
+    (onSubmit)="EditUser(form.value)"
 ></app-modal>
