--- a/AngularApp/src/app/pages/user/user-about-medical-institution/user-about-medical-institution.component.html
+++ b/AngularApp/src/app/pages/user/user-about-medical-institution/user-about-medical-institution.component.html
@@ -11,6 +11,6 @@
         <a class="btn btn-primary mt-3" [routerLink]="res.tipUstanove == 'apoteka' ? '/pretrazi/lijekovi/' + res.ustanovaId : '/pretrazi/ljekari/' + res.ustanovaId">{{ res.tipUstanove == 'apoteka' ? ('view_medications' | translate) : ('view_doctors' | translate) }}</a>
       </div>
     </div>
-    <app-view-map [medicalInstitutionId]="res.ustanovaId"></app-view-map>
+    <app-map [medicalInstitutionId]="res.ustanovaId"></app-map>
   </div>
   
